2000-09-26  Richard Braakman  <dark@wapit.com>

	* Making release 0.11.2.

2000-09-26  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox_req.c: smsbox used to dump core if the sendsms
	username was incorrect, now it correctly returned authorization
	failure. Fixes bug report 105 from Paul Keogh.

2000-09-26  Lars Wirzenius  <liw@iki.fi>

	* test/fakesmsc.c: Initialize the third parameter to accept
	correctly. I wonder why this has ever worked.

2000-09-26  Kalle Marjola  <rpr@wapit.com>

	* gw/smsbox_req.c, gw/urltrans.c: set so that message without any
	content is passed to default service group, not ignored. Fixed
	request count, too.

2000-09-25  Richard Braakman  <dark@wapit.com>

	* gwlib/conn.c: Make conn_read_line() work more than once.
	Thanks to mulix@actcom.co.il for reporting this.

	* gw/wtp_send.[ch], gw/wtp_state-decl.h: Removed "event"
	parameter from wtp_send_abort and wtp_send_ack.  There were
	assertions for this (otherwise unused) parameter which caused
	the function to fail if the event was for example a timeout.

2000-09-25  Lars Wirzenius  <liw@iki.fi>

	* checks/check_http.sh: Check for "ERROR:" in log file.
	
	* gw/html.h: Include gwlib/gwlib.h, not octstr.h.
	
	* test/test_http.c: Add -q option.
	
	* gwlib/http.c: Bugfix. Format string said %s when it should
	have said %S.

2000-09-25  Kalle Marjola  <rpr@wapit.com>

	* gw/smsbox*.*: activated sendsms-user allow/deny-ip strings

	* gw/urltrans.c|h: appropriate modifications to that file
	
	* doc/userguide/userguide.xml: started to write a new chapter
	about SMS Kannel setup

2000-09-25  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_udp.c, gwlib/socket.c|h, test/test_udp.c: inserted
	interface-name patch by Andreas Fink. 

2000-09-25  Lars Wirzenius  <liw@iki.fi>

	* doc/userguide/newconf.txt: Added slightly better descriptions
	from Paul Keogh for SMS2000 config variables.

2000-09-25  Kalle Marjola  <rpr@wapit.com>

	* doc/userguide/userguide.xml, doc/userguide/newconf.txt: updated